ajustes menores
